[package]
authors = ["Daniel"]
edition = "2021"
readme = "README.md"
name = "rtic_3"
version = "0.1.0"

[workspace]




[dependencies]
cortex-m = { version = "0.7.1", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
# TODO(4) Select the correct rtic backend
rtic = { version = "2.0.0-alpha.1", features = [ "thumbv7-backend" ] }
# TODO(5) Add hal as dependency
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "stm32f303xc"] }
# TODO add a monotonic if you use scheduling
rtic-monotonics = { version = "1.0.0-alpha.2", features = [ "cortex-m-systick" ]}
cortex-m-semihosting = "0.3.3"





# this lets you use `cargo fix`!
[[bin]]
name = "rtic_3"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
